# bevy_material_ui

./: .gitignore  .pr-description.md  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DEMO_GUIDE.md  README.md  build.rs  telemetry.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml
assets/fonts/: LICENSE  README.md
assets/i18n/: de-DE.mui_lang  en-US.mui_lang  es-ES.mui_lang  fr-FR.mui_lang  he-IL.mui_lang  ja-JP.mui_lang  zh-CN.mui_lang
benches/: component_benchmarks.rs  system_benchmarks.rs
benches/components/: button.rs  card.rs  checkbox.rs  chip.rs  divider.rs  fab.rs  icon_button.rs  list.rs  loading_indicator.rs  mod.rs  progress.rs  radio.rs  search_bar.rs  select.rs  slider.rs  state_changes.rs  switch.rs  tokens.rs
benches/systems/: component_queries.rs  elevation_calculations.rs  entity_spawning.rs  focus_updates.rs  mixed_workload.rs  mod.rs  ripple_updates.rs  scroll_operations.rs  select_dropdown_spawning.rs  theme_access.rs
benchmarks/results/: README.md  badge.json
docs/: DATETIME_PICKER_REFACTOR.md  DEVELOPER_GUIDE.md  HCT_SOLVER.md  I18N_IMPLEMENTATION_REVIEW.md  I18N_QUICK_REFERENCE.md  INTERNATIONALIZATION.md  MIGRATION_v0.2.7.md  README.md  component-options-comparison.md  orientation-policy.md
docs/audits/: divider-vs-mdc.md
docs/components/: button.md  datetime_picker.md  list.md  menu.md  progress.md  select.md  slider.md  tabs.md  text_field.md  toolbar.md
examples/: all_icon_buttons.rs  app_bar_demo.rs  badge_demo.rs  button_demo.rs  button_group_demo.rs  card_demo.rs  checkbox_demo.rs  chip_demo.rs  date_picker_demo.rs  debug_hctsolver.rs  dialog_demo.rs  divider_demo.rs  elevation_demo.rs  fab_demo.rs  icon_button_demo.rs  icons_demo.rs  layouts_demo.rs  list_demo.rs  loading_indicator_demo.rs  menu_demo.rs  motion_demo.rs  palette_tool.rs  progress_demo.rs  radio_demo.rs  ripple_demo.rs  scroll_demo.rs  search_demo.rs  select_demo.rs  showcase.rs  showcase_minimal.rs  slider_demo.rs  snackbar_demo.rs  switch_demo.rs  tabs_demo.rs  test_green_colors.rs  textfield_demo.rs  theme_demo.rs  time_picker_demo.rs  toolbar_demo.rs  tooltip_demo.rs  (+3 more)
examples/showcase/: common.rs  i18n_helpers.rs  main.rs  mod.rs  navigation.rs  showcase.rs
examples/showcase/views/: app_bar.rs  badges.rs  button_group.rs  buttons.rs  cards.rs  checkboxes.rs  chips.rs  date_picker.rs  dialogs.rs  dividers.rs  elevation.rs  fab.rs  icon_buttons.rs  icons.rs  layouts.rs  lists.rs  loading_indicator.rs  menus.rs  mod.rs  motion.rs  progress.rs  radios.rs  ripple.rs  scroll.rs  search.rs  select.rs  sliders.rs  snackbar.rs  switches.rs  tabs.rs  text_fields.rs  theme.rs  time_picker.rs  toolbar.rs  tooltips.rs  translations.rs  typography.rs  ui_shapes.rs
src/: adaptive.rs  app_bar.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  chip.rs  dialog.rs  divider.rs  elevation.rs  fab.rs  focus.rs  i18n.rs  icon_button.rs  lib.rs  list.rs  loading_indicator.rs  locale.rs  menu.rs  motion.rs  progress.rs  radio.rs  ripple.rs  scroll.rs  search.rs  select.rs  slider.rs  snackbar.rs  switch.rs  tabs.rs  telemetry.rs  text_field.rs  theme.rs  tokens.rs  toolbar.rs  tooltip.rs  typography.rs
src/color/: hct.rs  hct_bevy.rs  math.rs  mod.rs  palette.rs  scheme.rs
src/date_picker/: calendar.rs  constraints.rs  mod.rs  types.rs
src/icons/: codepoints.rs  icon.rs  material_icon_names.rs  mod.rs  style.rs
src/icons/svg/: loader.rs  mod.rs  svg_icon.rs
src/icons_embedded/: generated.rs  mod.rs
src/layout/: mod.rs  standard_drawer_scaffold.rs
src/time_picker/: clock.rs  format.rs  mod.rs
tests/: color_tests.rs  component_tests.rs  icon_tests.rs  material_component_tests.rs
tests/ui_tests/: .gitignore  README.md  analyze_results.py  element_click_test.py  quick_test.py  requirements.txt  run_tests.py  telemetry.json  visual_diff.py
web/: app.js  index.html  style.css
