[package]
name = "bevy_material_ui"
version = "0.2.5"
edition = "2021"
authors = ["Edgar H. Sanchez"]
description = "Material Design 3 UI components for Bevy game engine"
license = "MIT"
repository = "https://github.com/edgarhsanchez/bevy_material_ui"
documentation = "https://docs.rs/bevy_material_ui"
keywords = ["bevy", "ui", "material-design", "gamedev"]
categories = ["game-development", "gui", "rendering"]
readme = "README.md"

# Ensure assets referenced via `include_bytes!` are present in published crates.
include = [
	"src/**",
	"assets/**",
	"docs/**",
	"examples/**",
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"COPYRIGHT",
]

[package.metadata.docs.rs]
# docs.rs uses a Linux builder; this hints it to build without pulling in extra system deps.
no-default-features = false
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Bevy Game Engine - Latest version
bevy = { version = "0.17.3", default-features = false, features = [
	"bevy_asset",
	"bevy_log",
	"bevy_picking",
	"bevy_winit",
	"bevy_render",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_ui_render",
	"bevy_text",
	"default_font",
	"png",
] }
serde_json = "1.0"
thiserror = "1.0"

# Pure Rust CAM16 + HCT solver
hct-cam16 = "0.1.0"

# Packed embedded icon blob (required).
google-material-design-icons-bin = "0.1.2"

# Optional clipboard support for text fields (copy/paste)
arboard = { version = "3.4", optional = true }

[features]
# Default to Bevy's full feature set for backwards compatibility.
default = ["bevy_full"]

# Enables Bevy's default feature set (includes 3D / PBR). This matches prior behavior when
# the dependency was specified as `bevy = "..."`.
bevy_full = ["bevy/default"]

# Marker feature for building with a minimal Bevy feature set (no 3D features).
# Use with `--no-default-features --features bevy_minimal`.
bevy_minimal = []

# Enables Bevy WebGL2 support for wasm builds.
webgl = ["bevy/webgl2"]

# Enables copy/paste support in `MaterialTextField` via the `arboard` crate.
clipboard = ["dep:arboard"]

[dev-dependencies]
# No dynamic_linking to avoid Windows linker limit issues

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }



[[bench]]
name = "color_benchmarks"
harness = false

[[bench]]
name = "component_benchmarks"
harness = false

[[bench]]
name = "system_benchmarks"
harness = false

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"

[[example]]
name = "showcase_minimal"
path = "examples/showcase/main.rs"
required-features = ["bevy_minimal"]
# Note: Cargo can't apply `--no-default-features` automatically per-example.
# Use: `cargo run-showcase-minimal`

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "button_group_demo"
path = "examples/button_group_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "badge_demo"
path = "examples/badge_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "app_bar_demo"
path = "examples/app_bar_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "slider_demo"
path = "examples/slider_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "switch_demo"
path = "examples/switch_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "textfield_demo"
path = "examples/textfield_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "card_demo"
path = "examples/card_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "chip_demo"
path = "examples/chip_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "checkbox_demo"
path = "examples/checkbox_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "radio_demo"
path = "examples/radio_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "progress_demo"
path = "examples/progress_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "list_demo"
path = "examples/list_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "icons_demo"
path = "examples/icons_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "icon_button_demo"
path = "examples/icon_button_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "all_icon_buttons"
path = "examples/all_icon_buttons.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "divider_demo"
path = "examples/divider_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "fab_demo"
path = "examples/fab_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "dialog_demo"
path = "examples/dialog_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "menu_demo"
path = "examples/menu_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "select_demo"
path = "examples/select_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "snackbar_demo"
path = "examples/snackbar_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "tabs_demo"
path = "examples/tabs_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "tooltip_demo"
path = "examples/tooltip_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "toolbar_demo"
path = "examples/toolbar_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "scroll_demo"
path = "examples/scroll_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "search_demo"
path = "examples/search_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "layouts_demo"
path = "examples/layouts_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "loading_indicator_demo"
path = "examples/loading_indicator_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "date_picker_demo"
path = "examples/date_picker_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "time_picker_demo"
path = "examples/time_picker_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "theme_demo"
path = "examples/theme_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "translations_demo"
path = "examples/translations_demo.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "palette_tool"
path = "examples/palette_tool.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "debug_hctsolver"
path = "examples/debug_hctsolver.rs"
required-features = ["bevy_minimal"]

[[example]]
name = "test_green_colors"
path = "examples/test_green_colors.rs"
required-features = ["bevy_minimal"]

